# forest_fire_detection_system

./: .gitignore  .gitmodules  .tasks  CMakeLists.txt  README.md  TODOs.md  package.xml
config/: H20T_Camera.yaml  ZigzagPathShape.yaml  frontend_config.yaml  m300_front_stereo_param.yaml  reconstruction.yaml  stereo_vo_config.yaml
document/: .gitignore  DJI_Platform_Structure.drawio
document/DJI_materials/: single_fire_detecting_system.drawio
document/Group_Meeting/1_flight_test_proposal/: flight_test_1_todo_list.md
document/Group_Meeting/1_the_task_and_timetable/: .~discuss.pptx  task_timetable.xlsx
document/Group_Meeting/2_flight_test_proposal/: 2_flight_test_steps.md
document/Group_Meeting/2_single_fire_test_task/: 2_flight_test.pptx
document/Group_Meeting/3_depth_extimation/: plan.pptx  plan_depth_extimation.md
document/Run/: run_the_precisely_water_dropping_node.md
include/app/fire_points_depth_estimation/: GrabDataDepthEstimation.hpp
include/app/precisely_water_dropping/: PreciselyWaterDropping.hpp
include/app/single_fire_point_reconstruction/: GrabInfoForReconstruction.hpp
include/app/single_fire_point_task/: SingleFirePointTaskManager.hpp
include/common/: CommonTypes.hpp  DepthImgWithPoseAtt.hpp
include/modules/BasicController/: ControllerBase.hpp  IncPIDController.hpp  PIDController.hpp
include/modules/DepthEstimator/: DepthFilter.hpp  SegmentLocationFinder.hpp
include/modules/DroneMovementController/: DroneMovementController.hpp
include/modules/GimbalCameraOperator/: GimbalCameraOperator.hpp
include/modules/H20TIMUPoseGrabber/: H20TIMUPoseGrabber.hpp
include/modules/ImgVideoOperator/: RGB_IRSeperator.hpp
include/modules/InfraredDroneController/: InfraredDroneController.hpp
include/modules/MapCreator/: MapCreater.hpp
include/modules/PathPlanner/: PathPlannerBase.hpp  PolygonalPathPlanner.hpp  ZigzagPathPlanner.hpp
include/modules/PoseCalculator/: PoseCalculator.hpp  PoseCalculator.hpp_
include/modules/StereoCameraOperator/: PoseAttStereoCamOperator.hpp  StereoCamOperator.hpp
include/modules/WayPointOperator/: WpV2Operator.hpp
include/test/: test_WpV2Operator.h  test_simple_command.hpp  test_stereo_vision_depth_preception_node.hpp
include/tools/: CVROSImg.hpp  GoogleEarthPath.hpp  MathLib.hpp  PositionHelper.hpp  SystemLib.hpp
include/tools/PrintControl/: FileWritter.hpp  PrintCtrlMacro.h  TODO.md
launch/: octotree_sever_map.launch  prepare_segmentation.launch  start_detecting_heat_fire_smoke.launch  test_pose_calculator.launch
msg/: SingleFireFuse.msg  SingleFireIR.msg  SingleFireRGB.msg
rviz/: display_octomap.rviz
scripts/: .gitignore
scripts/develop/classifier/resnet18/: GenerateTrt.py  (+4 more)
scripts/develop/semantic_segmentation_unet/: record.md  tra_acc_list.csv  val_acc_list.csv  val_loss_list.csv
scripts/examples/: cv2forcapturingcameravideos.py  numpy_tensor_Image_cv2_example.py
scripts/modules/blocks/: attentiongateblock.py  depthwiseblock.py  doubleconvblock.py  inoutblock.py  lossblock.py  resblock.py
scripts/modules/common/: attentiongate.py  doubleconv.py  inout.py
scripts/modules/thermal_rgb_fusion/: fire_smoke_rgb_resnet_classifier.py  fire_somke_ir_rgb_fuser.py  heat_ir_threshold_locater.py
scripts/modules/unet_smoke_segmentation/: smoke_segmentator.py
scripts/modules/vehicle_ultis/: seperate_original_image.py  toggle_vechile_camera.py
scripts/test/: call_segment_smoke.py  pub_local_video.py  test_PIL.py  test_cv_bridge.py  test_logging.py  toggle_local_camera.py
scripts/tools/: convert_label_2_binary.py  custom_logger.py  cutvideo.py  json_2_mask.sh  kf.py  load_save_local_video.py  print_img_boundary_in_aligned_img.py  resizetensor.py  tensor2cv2.py  video_to_images.py
scripts/tools/align_images/: align_the_rgb_ir.py  calculate_paramter.py
scripts/tools/align_images_inhomogeneous/: calculate_paramter.py  matching_points.md
scripts/tools/change_color_space/: covert_color_space.py
scripts/tools/notebook/: draw_gimbal_control.ipynb  draw_m300_trajectory.ipynb
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/fire_points_depth_estimation/: GrabDataDepthEstimation.cpp
src/app/precisely_water_dropping/: PreciselyWaterDropping.cpp
src/app/single_fire_point_reconstruction/: GrabInfoForReconstruction.cpp
src/app/single_fire_point_task/: SingleFirePointTaskManager.cpp  TODOs.md
src/common/: CMakeLists.txt  README.md
src/modules/: CMakeLists.txt
src/modules/DepthEstimator/: DepthFilter.cpp
src/modules/DroneMovementController/: DroneMovementController.cpp
src/modules/GimbalCameraOperator/: GimbalCameraOperator.cpp
src/modules/H20TIMUPoseGrabber/: H20TIMUPoseGrabber.cpp
src/modules/ImgVideoOperator/: RGB_IRSeperator.cpp
src/modules/InfraredDroneController/: InfraredDroneController.cpp
src/modules/MapCreator/: MapCreater.cpp
src/modules/PathPlanner/: PolygonalPathPlanner.cpp  ZigzagPathPlanner.cpp
src/modules/PoseCalculator/: PoseCalculator.cpp  PoseCalculator.cpp_
src/modules/StereoCameraOperator/: PoseAttStereoCamOperator.cpp  StereoCamOpertaor.cpp  StereoCamOpertaor.cpp_
src/modules/WayPointOperator/: WpV2Operator.cpp
src/test/: CMakeLists.txt  get_camera_pub.cpp  test_DepthFilter.cpp  test_FileCreationRemove.cpp  test_FileWritter.cpp  test_GimbalCameraOperator.cpp  test_Pathplanning.cpp  test_PolygonalPathPlanner.cpp  test_PoseAttStereoCamOperator.cpp  test_PoseAttStereoCamOperator.cpp_  test_PoseCalculator.cpp  test_PrintControl.cpp  test_SegmentLocationFinder.cpp  test_StereoCamOpertaor.cpp  test_StereoCamOpertaor.cpp_  test_WpV2Operator.cpp  test_getParam.cpp  test_locate_boundary.cpp  test_simple_command.cpp  test_vision_depth_preception.cpp  test_zigzag_planner.cpp
src/tools/: AlianRGB_IR.cpp  CMakeLists.txt  GetCurrentGPSPos.cpp  HandleImageTransport.cpp  NewFirePointGenerator.cpp  PublishSLAMDataset.cpp  RangerFinderBasedLocator.cpp  RecordGPSLocalPos.cpp  SaveM300FrontStereoImu.cpp  SaveM300FrontStereoImu.cpp_  ToggleVehicleVideo.cpp  rotation_from_camera2body.cpp
srv/: SegmentSmoke.srv  ToggleGrabDataDepthEstimation.srv
(+85 files in other folders)
