#------------------------------------------------------------------------------
#
#   Copyright (C) 2021 Concordia NAVlab. All rights reserved.
#
#   @Filename: CMakeLists.txt
#
#   @Author: Shun Li
#
#   @Date: 2021-10-22
#
#   @Email: 2015097272@qq.com
#
#   @Description: 
#
#------------------------------------------------------------------------------

# common library
add_subdirectory(common)

# modules library
add_subdirectory(modules)

# executable tools
add_subdirectory(tools)

# executable test
add_subdirectory(test)

# executable application
add_subdirectory(app)
